package ProgettoSE;

public class Cliente extends Persona {

    public Cliente(String id) {
        super(id);
    }
}

