package ProgettoSE;

public class Magazziniere extends Persona {

    public Magazziniere(String id) {
        super(id);
    }

    //METODI


}
